--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Artblocks-Server",
+  "name": "Generator-Server",
   "version": "1.0.0",
   "description": "Serves script outputs for the Art Blocks smart contract.",
   "main": "index.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/snowfro/artblocks-server-production.git"
+    "url": "git+https://github.com/KimhabOrk/generator-server.git"
   },
   "author": "Erick Calderon",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/snowfro/artblocks-server-production/issues"
+    "url": "https://github.com/KimhabOrk/generator-server/issues"
   },
-  "homepage": "https://github.com/snowfro/artblocks-server-production#readme",
+  "homepage": "https://github.com/KimhabOrk/generator-server#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
