--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "api-server",
+  "name": "server",
   "version": "1.0.0",
   "description": "Serves script outputs for the Art Blocks smart contract.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,15 +18,15 @@
   "homepage": "https://github.com/KimhabOrk/generator-server#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "js-beautify": "^1.13.0",
-    "mime": "^2.4.6",
-    "pug": "^3.0.0",
-    "puppeteer": "^21.3.7",
+    "express": "^4.18.2",
+    "hono": "^3.11.1",
+    "http": "^0.0.1-security",
+    "js-beautify": "^1.14.11",
+    "mime": "^4.0.0",
+    "nodemon": "^3.0.2",
+    "pug": "^3.0.2",
+    "puppeteer": "^21.5.2",
     "serve-favicon": "^2.5.0",
-    "web3": "^4.0.3"
-  },
-  "engine": {
-    "node": "0.10.0"
+    "web3": "^4.0.1"
   }
 }
